Refactor to remove heavy K8s .list() calls